hphp/hack/test/typecheck/class_meth7.php.exp
File "class_meth7.php", line 19, characters 29-32:
You cannot use this method with class_meth (whether you are in the same class or not). (Typing[4078])
File "class_meth7.php", line 13, characters 27-28:
It is declared as private here
